# python-seed

./: README.md  gitignore  mypy.ini  pyproject.toml  ruff.toml  setup.sh
apps/x-api/: Dockerfile  README.md  pyproject.toml
apps/x-api/app/: main.py  windmill.json
apps/x-api/app/config/: __init__.py  settings.py
apps/x-api/app/db/: __init__.py  main.py
apps/x-api/app/domain/: __init__.py
apps/x-api/app/domain/book/: book_dto.py  book_entity.py  book_repo.py  book_router.py  book_service.py
apps/x-api/app/domain/dashboard_widget/: dashboard_widget_dto.py  dashboard_widget_entity.py  dashboard_widget_repo.py  dashboard_widget_router.py  dashboard_widget_service.py
apps/x-api/app/domain/health/: health_dto.py  health_router.py
apps/x-api/app/domain/model_inference/: model_inference_dto.py  model_inference_entity.py  model_inference_repo.py  model_inference_router.py  model_inference_service.py  train_solar_panel_model.py
apps/x-api/app/domain/publisher/: publisher_dto.py  publisher_entity.py  publisher_repo.py  publisher_router.py  publisher_service.py
apps/x-api/app/domain/solar_panel/: generate_paquet.py  solar_panel_dto.py  solar_panel_entity.py  solar_panel_information.parquet  solar_panel_location.parquet  solar_panel_pyiceberg.py  solar_panel_repo.py  solar_panel_router.py  solar_panel_service.py
apps/x-api/app/domain/test/: test_router.py
apps/x-api/app/solar_panel_data/: solar_panel_information.parquet  solar_panel_location.parquet
docs/: libraries.md  uv.md
libs/common-fastapi/: build_hook.py  pyproject.toml
libs/common-fastapi/common_fastapi/: __init__.py  _build_info.py  _version.py  app_factory.py
libs/common-fastapi/common_fastapi/config/: __init__.py  cli_env.py  env_loader.py  log.py  pretty_console_renderer.py  settings.py
libs/common-fastapi/common_fastapi/config/enums/: app_env.py  log_level.py
libs/common-fastapi/common_fastapi/exceptions/: error_code.py  exception_4xx.py  exception_5xx.py  exception_handler.py
libs/common-fastapi/common_fastapi/middlewares/: __init__.py  log_context.py  response_time.py  security_headers.py
scripts/git/: ruff_format.py
scripts/uv/: build.sh
