[project]
name = "x-api"
dynamic = ["version"]
description = ""
authors = [
  { name = "G O", email = "GO@test.com" }
]
readme = "README.md"

requires-python = ">=3.12.4"

dependencies = [
  "fastapi>=0.115.6",
  "orjson>=3.10.12",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "uvicorn>=0.34.0",
  "common-fastapi",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "sqlmodel>=0.0.22",
  "greenlet>=3.1.1",
]

[tool.uv.sources]
common-fastapi = { workspace = true }

[tool.poe.tasks]
start = "uv run uvicorn app.main:app --reload --no-server-header --reload-dir=../../libs/common-fastapi --reload-dir=./"
build = "../../scripts/uv/build.sh common-fastapi"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.version]
source = "uv-dynamic-versioning"